tests/NormalTests/paczka1/small_fuzzy/92465610.err
Error in line 2: A292 S466 1,8
Error in line 3: dSHt A616 36,5
Error in line 5: A292 A292 20,3
